objects/amazonconnect__Call_Attributes_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__Attribute_Name__c</fullName>
        <description>The name of the attribute as it is configured in Amazon Connect.</description>
        <inlineHelpText>Please provide the name of the attribute as it is configured in Amazon Connect&apos;s Call Flow.</inlineHelpText>
        <label>Amazon Connect Attribute Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amazonconnect__CCP_Attribute_Default_Value__c</fullName>
        <label>Attribute Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CCP_Attribute_Display_KeyValue__c</fullName>
        <label>Attribute Display Key Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CCP_Attribute_Display_Order__c</fullName>
        <label>Attribute Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CCP_Attribute_FieldType__c</fullName>
        <label>Attribute Field Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CCP_Attribute_Label__c</fullName>
        <description>The label to be used in the CCP display.</description>
        <inlineHelpText>Please provide the label for this attribute as it will be shown in the display within CCP. Ideally, the shorter the name the better it is.</inlineHelpText>
        <label>Attribute Label</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CCP_Attribute_Name__c</fullName>
        <description>The name of the attribute as it is configured in Amazon Connect.</description>
        <inlineHelpText>Please provide the name of the attribute as it is configured in Amazon Connect&apos;s Call Flow.</inlineHelpText>
        <label>Attribute Name</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amazonconnect__CCP_Attribute_Section__c</fullName>
        <label>Attribute Section</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CCP_Attribute_Style__c</fullName>
        <label>Attribute Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Call Attributes Configuration</label>
    <pluralLabel>Call Attributes Configurations</pluralLabel>
</CustomObject>